# chicago-bike-pipeline

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
dbt/: pyproject.toml
dbt/bike_analytics/: dbt_project.yml
dbt/bike_analytics/models/: sources.yml  trips_by_member_type.sql  trips_per_day.sql  trips_per_hour.sql  trips_per_weekday.sql
docs/: schema_notes.md
notebooks/: check_processed_exploration.ipynb  inspect_data.ipynb  test.ipynb  transform_exploration.ipynb
scripts/: check_processed.py  combine.py  process_all.py  run_pipeline.py  test.py  transform.py  upload_to_gcs.py
scripts/load/: load_to_bigquery.py
terraform/: main.tf  variables.tf
